--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 --- 
 layout: default 
-title: Alain's Tech Blog 
-description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
+title: Shoot Your Friends Blog 
+description: Our game blog for the game called "Shoot Your Friends" 
 comments: true 
 ---
 
