--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ comments: true
 		<h6 class="list-group-item-heading">{{ post.published | date: '%B %d,
 			%Y' }} | (Last Update : {{ post.date | date: '%B %d, %Y' }})</h6></a>
 		{% for tag in post.tags %}
-		<a class="label label-default" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
+		<a class="label label-default" href="/ShootYourFriendsWebsite/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		{% endfor %}
 		{% if post.noimage %}
 		{% else %}		
 		<img
 			alt="{{ post.title }}"
-			src="/assets/images/{{post.id}}/top.jpg" class="img-responsive">
+			src="/ShootYourFriendsWebsite/assets/images/{{post.id}}/top.jpg" class="img-responsive">
 		{% endif %}
 		<p>{{ post.excerpt | strip_html}}</p>
 		<a href="{{ post.url }}">Read more...</a>
