--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ comments: true
 		<h6 class="list-group-item-heading">{{ post.published | date: '%B %d,
 			%Y' }} | (Last Update : {{ post.date | date: '%B %d, %Y' }})</h6></a>
 		{% for tag in post.tags %}
-		<a class="label label-default" href="/ShootYourFriendsWebsite/tags/#{{ tag | slugify }}">{{ tag }}</a>
+		<a class="label label-default" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		{% endfor %}
 		{% if post.noimage %}
 		{% else %}		
