Remove extra posts

--- a/_posts/2020-05-27-draft-post-file.html
+++ b/_posts/2020-05-27-draft-post-file.html
@@ -44,9 +44,17 @@ github: "https://www.google.com"
 
 {% highlight shell %}
 This adds a code box.
-Replace 'shell' with 'java' or other keywords.
+Replace 'shell' with 'java', 'xml', or other keywords.
 {% endhighlight %}
 
 <pre>
     Same as code box as above, but it's just a box.
 </pre>
+
+<a href="/assets/images/{{page.id}}/scaledown.png">
+    <img class="center-block img-responsive" src="/assets/images/{{page.id}}/scaledown.png" alt="scale down a network of brokers"/>
+</a>
+
+<p>
+    &nbsp; <- Space
+</p>
