Change image to banner size

--- a/_drafts/2020-05-27-draft-post-file.html
+++ b/_drafts/2020-05-27-draft-post-file.html
@@ -56,8 +56,8 @@ Replace 'shell' with 'java', 'xml', 'yml', or other keywords.
 </pre>
 
 <p>You can click this picture.</p>
-<a href="/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg">
-    <img class="center-block img-responsive" src="/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg" alt="Image description here"/>
+<a href="/assets/images/{{page.id}}/top.jpg">
+    <img class="center-block img-responsive" src="/assets/images/{{page.id}}/top.jpg" alt="scale down a network of brokers"/>
 </a>
 
 <p>
