Cleanup old template info

--- a/_drafts/2020-05-27-draft-post-file.html
+++ b/_drafts/2020-05-27-draft-post-file.html
@@ -9,7 +9,7 @@ tags: [tag1, randomtag, tag3]
 github: "https://www.google.com"
 ---
 
-<p>This shows up in the main blog page.</p>
+<p>This shows up in the main blog page. To see it in action, copy this file to the _posts folder.</p>
 
 <!--more-->
 
@@ -56,8 +56,8 @@ Replace 'shell' with 'java', 'xml', 'yml', or other keywords.
 </pre>
 
 <p>You can click this picture.</p>
-<a href="/assets/images/{{page.id}}/top.jpg">
-    <img class="center-block img-responsive" src="/assets/images/{{page.id}}/top.jpg" alt="scale down a network of brokers"/>
+<a href="/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg">
+    <img class="center-block img-responsive" src="/ShootYourFriendsWebsite/assets/images/{{page.id}}/top.jpg" alt="Image description here"/>
 </a>
 
 <p>
