--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,26 +3,26 @@ layout: default
 title: About
 permalink: /about/
 ---
-<h1>Good day fellow readers and welcome to my tech blog !</h1>
+<h1>So you might be wondering who the heck are these guys even? </h1>
 
 <p>
-My name Alain Pham.
-I am currently working as a Solution Architect specialized in Application Development.
-My main task is to deliver complex proof of concepts across EMEA to enable the adoption of open source technologies.
-
+	Without getting too introspective, we're not too sure of that ourselves. 
+	It's so early in the development cycle that we haven't had nailed down a business name or jumped through all the hoops to become an incorporated entity. 
+	In fact, if you're reading this post when it was written, you're probably on one of our developers' personal GitHub pages right now.
 </p>
 <p>
-The purpose of my life?
-Since a very young age I have always been passionate about ecosystems of technology. So my purpose on earth is
-making it possible to advantage of a wide range of technologies and methods and to solve one complex problem after another.
+	So if we can't tell you about the company - since it doesn't exist - we can at least tell you about our operations. 
+	We're developing this game in Canada, in the east-coast province of New Brunswick. 
+	Most of us met in college, became firm friends, and started playing video games together. 
+	It wasn't long before we decided we ought to be building games too, seeing as how we have that skillset and all.
 </p>
 
 <p>
-You can also follow me on social media:  <br>
-<a href="http://github.com/alainpham">
+You can also follow us on social media:  <br>
+<a href="http://github.com/zmalexander">
 			<i class="fa fa-github fa-3x"></i></a>
-	<a href="http://www.linkedin.com/in/alainpham">
+	<a href="http://www.linkedin.com/">
 			<i class="fa fa-linkedin-square fa-3x"></i></a>
-	<a href="https://twitter.com/koint">
+	<a href="https://twitter.com/">
 			<i class="fa fa-twitter fa-3x"></i></a>
 </p>
