--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,15 +6,43 @@ permalink: /about/
 <h1>So you might be wondering who the heck are these guys even? </h1>
 
 <p>
-	Without getting too introspective, we're not too sure of that ourselves. 
-	It's so early in the development cycle that we haven't had nailed down a business name or jumped through all the hoops to become an incorporated entity. 
-	In fact, if you're reading this post when it was written, you're probably on one of our developers' personal GitHub pages right now.
-</p>
-<p>
 	So if we can't tell you about the company - since it doesn't exist - we can at least tell you about our operations. 
 	We're developing this game in Canada, in the east-coast province of New Brunswick. 
 	Most of us met in college, became firm friends, and started playing video games together. 
 	It wasn't long before we decided we ought to be building games too, seeing as how we have that skillset and all.
+</p>
+
+<p>
+	Peter Adam
+	Hi, my name is Peter and I'm the lead developer for Shoot Your Friends. 
+	I have three years of experience with enterprise programming and close to three decades of experience with playing video games. 
+	I made my first game when I was eleven, and it's always been a hobby of mine since.
+	</p><p>
+	Apart from video games, I'm also into board games and roleplaying games. I've been a Game Master for tabletop games for about ten years now. 
+	On the Dungeons & Dragons / Pathfinder divide I usually responded with "either," or "both," but I've also dabbled in other games like Apocalypse World or Ironsworn. 
+	My all time favorite board game is Betrayal at House on the Hill, and that's probably in large part due to my love for cheesey movies. 
+</p>
+
+<p>
+	Hey I'm Zach, and I'm the developer working on the UI portion of Shoot Your Friends while also helping out where I can. 
+	I have two years of programming & development experience, with five years of business & public relations experience. 
+	</p><p>
+	I have wildly varied interests, from playing video games, roleplaying games, website development, programming, photography, hiking, exploring cities, 
+	business PR, online sales, investments, real estate, working out, yoga, minimalism, travelling the world, psychology, gardening, scuba diving, skydiving, 
+	and an ambition that keeps me constantly learning new things. I am the person who will try anything at least once!
+	</p><p>
+	I put together the blog for Shoot Your Friends with efficiency in mind, and I am successful! The blog is low cost (free) & low maintenance once set up, 
+	and posting is just as easy as using WordPress. While there's always improvements to be made to the blog, I'm happy with the progress made so far.
+	</p><p>
+	If you want to know more about me, check out my website and portfolio here - <a href="www.zachmackay.com">zachmackay.com</a>.
+</p>
+
+<p>
+	Sara Ring
+</p>
+
+<p>
+	Gerry Vautour
 </p>
 
 <p>
