--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,7 +13,7 @@ permalink: /about/
 </p>
 
 <p>
-	Peter Adam
+	<h3>Peter Adam</h3>
 	Hi, my name is Peter and I'm the lead developer for Shoot Your Friends. 
 	I have three years of experience with enterprise programming and close to three decades of experience with playing video games. 
 	I made my first game when I was eleven, and it's always been a hobby of mine since.
@@ -24,7 +24,8 @@ permalink: /about/
 </p>
 
 <p>
-	Hey I'm Zach, and I'm the developer working on the UI portion of Shoot Your Friends while also helping out where I can. 
+	<h3>Hey I'm Zach</h3>
+	I'm the developer working on the UI portion of Shoot Your Friends while also helping out where I can. 
 	I have two years of programming & development experience, with five years of business & public relations experience. 
 	</p><p>
 	I have wildly varied interests, from playing video games, roleplaying games, website development, programming, photography, hiking, exploring cities, 
@@ -38,11 +39,16 @@ permalink: /about/
 </p>
 
 <p>
-	Sara Ring
+	<h3>Sara Ring</h3>
 </p>
 
 <p>
-	Gerry Vautour
+	<h3>Gerry Vautour</h3>
+	Hi there. I'm Gerry, another developer on Shoot Your Friends. I dropped out of a programming course in college, missed it, 
+	and when these guys suggested we make a game together, I immediately jumped on board. I've played games my whole 30-some years of life, 
+	and have always wanted to spend my time making games but had no clue where or how to start.  Now I have some knowledge, and a group to help keep me on track.
+	I'm not the social type, so you likely won't hear much from me on a regular basis. I'll just be working in the background to make the best games I can, 
+	and hopefully someone out there will like them.
 </p>
 
 <p>
