--- a/_pages/recommended-products.html
+++ b/_pages/recommended-products.html
@@ -5,6 +5,6 @@ permalink: /products/
 ---
 
 <p>
-Here are a list of products I use and recommend:
+Here are a list of products we use and recommend:
 Unity
 </p>
