Remove '/blog' path

--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@ comments: true
 <div class="list-group">
 	{% for post in paginator.posts %} 
 	<div class="list-group-item">
-	<a href="/blog{{ post.url }}">
+	<a href="{{ post.url }}">
 		<h4 class="list-group-item-heading">{{ post.title }}</h4>
 		<h6 class="list-group-item-heading">{{ post.published | date: '%B %d,
 			%Y' }} | (Last Update : {{ post.date | date: '%B %d, %Y' }})</h6></a>
 		{% for tag in post.tags %}
-		<a class="label label-default" href="/blog/tags/#{{ tag | slugify }}">{{ tag }}</a>
+		<a class="label label-default" href="/tags/#{{ tag | slugify }}">{{ tag }}</a>
 		{% endfor %}
 		{% if post.noimage %}
 		{% else %}		
 		<img
 			alt="{{ post.title }}"
-			src="/blog/assets/images/{{post.id}}/top.jpg" class="img-responsive">
+			src="/assets/images/{{post.id}}/top.jpg" class="img-responsive">
 		{% endif %}
 		<p>{{ post.excerpt | strip_html}}</p>
-		<a href="/blog{{ post.url }}">Read more...</a>
+		<a href="{{ post.url }}">Read more...</a>
 
 	</div>
 	{% endfor %}
